bug fix: sidenavs' elements staying out of screen

--- a/app/statics/css/sidenav.css
+++ b/app/statics/css/sidenav.css
@@ -4,12 +4,12 @@
     position: fixed;
     z-index: 1;
     top: auto;
+    bottom: 0px;
     /*left: auto;*/
     background-color: #343a40;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    padding-bottom: 8%;
   }
 
   .sidenav-left{
